[gd_scene load_steps=14 format=2]

[ext_resource path="res://TestEnv/GummyDefender.gd" type="Script" id=2]
[ext_resource path="res://TestEnv/PlayerDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/atlas/GummyDefender/Attack/attack_1.tres" type="Texture" id=4]
[ext_resource path="res://Assets/atlas/GummyDefender/Idle/idle_0.tres" type="Texture" id=5]
[ext_resource path="res://Assets/atlas/GummyDefender/Move/move_0.tres" type="Texture" id=6]
[ext_resource path="res://Assets/atlas/GummyDefender/Move/move_1.tres" type="Texture" id=7]
[ext_resource path="res://Assets/atlas/GummyDefender/Attack/attack_0.tres" type="Texture" id=8]
[ext_resource path="res://Assets/atlas/GummyDefender/Move/move_2.tres" type="Texture" id=9]
[ext_resource path="res://Assets/atlas/GummyDefender/Death/death_0.tres" type="Texture" id=10]
[ext_resource path="res://Assets/atlas/GummyDefender/Death/death_1.tres" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 4 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 47.5493 )

[sub_resource type="RectangleShape2D" id=3]

[node name="GummyDefender" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetector" parent="." instance=ExtResource( 3 )]

[node name="DashPoint" type="Area2D" parent="."]
position = Vector2( -163.006, -0.105498 )

[node name="DashCollider" type="CollisionShape2D" parent="DashPoint"]
shape = SubResource( 3 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="DashPoint" to="." method="_on_DashPoint_body_entered"]
